--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "guiadoaluno.app.tcc",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.2",
+    "firebase": "^7.18.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^3.2.6",
     "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "type": "module"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "javascript.suggestionActions.enabled": false
   },
   "browserslist": {
     "production": [
