--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.2",
     "firebase": "^7.18.0",
+    "pwa": "^1.9.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^3.2.6",
