--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,31 @@
-{
-  "short_name": "React App",
-  "name": "Create React App Sample",
+{"name": "Guia do Aluno ",
+  "short_name": "guiadoaluno",
+  "theme_color": "#4abdac",
+  "background_color": "#4abdac",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
+ 
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      
     },
     {
-      "src": "logo192.png",
+      "src": "maskable_iconn.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
-      "src": "logo512.png",
+      "src": "icon512x512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
+    },
+
+    {
+      "theme_color": "#4abdac"
+    
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
